--- a/Services/packages.config
+++ b/Services/packages.config
@@ -1,5 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Google.Apis" version="1.43.0" targetFramework="net461" />
+  <package id="Google.Apis.Auth" version="1.43.0" targetFramework="net461" />
+  <package id="Google.Apis.Core" version="1.43.0" targetFramework="net461" />
+  <package id="Google.Apis.Sheets.v4" version="1.43.0.1867" targetFramework="net461" />
   <package id="Microsoft.Bcl.AsyncInterfaces" version="1.1.0" targetFramework="net461" />
   <package id="Microsoft.Bcl.HashCode" version="1.1.0" targetFramework="net461" />
   <package id="Microsoft.CSharp" version="4.7.0" targetFramework="net461" />
@@ -25,7 +29,7 @@
   <package id="Microsoft.Extensions.Logging.Abstractions" version="3.1.2" targetFramework="net461" />
   <package id="Microsoft.Extensions.Options" version="3.1.2" targetFramework="net461" />
   <package id="Microsoft.Extensions.Primitives" version="3.1.2" targetFramework="net461" />
-  <package id="Newtonsoft.Json" version="9.0.1" targetFramework="net461" />
+  <package id="Newtonsoft.Json" version="10.0.2" targetFramework="net461" />
   <package id="SQLitePCLRaw.bundle_e_sqlite3" version="2.0.2" targetFramework="net461" />
   <package id="SQLitePCLRaw.core" version="2.0.2" targetFramework="net461" />
   <package id="SQLitePCLRaw.lib.e_sqlite3" version="2.0.2" targetFramework="net461" />
